--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://cdn.jsdelivr.net/npm/prismjs@1.29.0/themes/prism-okaidia.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="toastbox.js"></script>
-  <script src="toastbox.min.js"></script>
+<!--   <script src="toastbox.min.js"></script> -->
   <style>
     /* Custom styles */
     .theme-card {
